{
    "appNameLabel": "Star Movie",
    "nowShowingCategoryLabel": "Now Showing",
    "comingSoonCategoryLabel": "Coming Soon",
    "detailCategoryLabel": "Detail",
    "reviewsCategoryLabel": "Reviews",
    "showtimeCategoryLabel": "Showtime",
    "synopsisHeaderLabel": "Synopsis",
    "castAndCrewHeaderLabel": "Cast & Crew",
    "showMoreButtonLabel": "Show More",
    "showLessButtonLabel": "Show Less",
    "viewAllButtonLabel": "View All",
    "notRatedLabel": "NR",
    "moviesNotAvailableErrorMessage":  "Movies are not available due to error. Turn to administrator!",
    "profileLabel": "Profile",
    "signUpButtonLabel": "Sign Up",
    "userNameInputLabel": "USER NAME",
    "passwordInputLabel": "PASSWORD",
    "forgotPasswordButtonLabel": "Forgot Password?",
    "loginButtonLabel": "Login",
    "loginIsSuccessLabel": "Login is success",
    "authFailureMessage": "Auth Failure",
    "shareMovieMessage": "Look, what movie I found!",
    "intentTitle": "Movie Sharing",
    "authFailureLoginMessage": "Invalid login",
    "invalidLoginMessage": "Login field should be at least 8 symbols",
    "requiredLoginMessage": "Login is required",
    "authFailurePasswordMessage": "Invalid password",
    "requiredPasswordMessage": "Password is required",
    "menuMovieReelButtonLabel": "Movie Reel",
    "menuEventTicketButtonLabel": "Event Ticket",
    "menuAlarmButtonLabel": "Alarm",
    "menuSingleButtonLabel": "Single",
    "paymentScreenLabel": "Payment",
    "phoneNumberFieldLabel": "Phone Number",
    "cardNumberFieldLabel": "Card Number",
    "validThruFieldLabel": "Valid thru",
    "cvvFieldLabel": "CVV",
    "paymentButtonLabel": "Pay",
    "dateValidationEmptyMonthMessage": "Month is empty",
    "dateValidationEmptyYearMessage": "Year is empty",
    "dateValidationMonthOutOfRange": "Month is out of range",
    "dateValidationDateExpired": "Date expired"
}
